<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_mmwave_sensor</name>
  <version>0.1.0</version>
  <description>Gazebo Sim 8 (Harmonic) mmWave radar point-cloud sensor plugin for ROS 2 Humble.</description>
  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Gazebo Harmonic / gz-sim8 -->
  <depend>gz_sim_vendor</depend>
  <depend>gz_plugin_vendor</depend>
  <depend>gz_math_vendor</depend>
  <depend>gz_common_vendor</depend>
  <depend>ros_gz_bridge</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
