<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mmwave_cloud_tools</name>
  <version>0.1.0</version>
  <description>
    ROS 2 Humble tools for mmWave radar point cloud post-processing.
    Includes mmwave_cloud_colorizer: maps the radial-velocity field "v"
    to an RGB colour for RViz2 visualisation.
  </description>
  <maintainer email="user@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
